# space-traders-api

./: .gitignore  .openapi-generator-ignore  CHANGELOG.md  Cargo.toml  Justfile  README.md  update.sh
.github/workflows/: test.yml
.openapi-generator/: FILES
docs/: CreateChart201ResponseData.md  DataApi.md  ExtractResources201ResponseData.md  ExtractResourcesWithSurvey201Response.md  ExtractResourcesWithSurvey201ResponseData.md  Faction.md  FactionsApi.md  FleetApi.md  GetShipModules200Response.md  GetStatus200ResponseStats.md  GetSupplyChain200Response.md  GetSupplyChain200ResponseData.md  GlobalApi.md  InstallShipModule201Response.md  InstallShipModule201ResponseData.md  InstallShipModule201ResponseDataTransaction.md  InstallShipModuleRequest.md  NavigateShip200ResponseData.md  PatchShipNav200Response.md  PatchShipNav200ResponseData.md  RefuelShip200ResponseData.md  Register201ResponseData.md  RemoveModule201Response.md  RemoveShipModuleRequest.md  ShipEngine.md  ShipFrame.md  ShipReactor.md  ShipType.md  ShipyardTransaction.md  SiphonResources201ResponseData.md  System.md  SystemsApi.md  TradeSymbol.md
examples/: main.rs
src/: lib.rs
src/apis/: agents_api.rs  configuration.rs  contracts_api.rs  data_api.rs  factions_api.rs  fleet_api.rs  global_api.rs  mod.rs  systems_api.rs
src/models/: accept_contract_200_response.rs  accept_contract_200_response_data.rs  activity_level.rs  agent.rs  chart.rs  construction.rs  construction_material.rs  contract.rs  contract_deliver_good.rs  contract_payment.rs  contract_terms.rs  cooldown.rs  create_chart_201_response.rs  (+181 more)
