[package]
name = "space-traders-api"
edition = "2024"
license = "MIT"

description = "Generated API client for SpaceTraders"
repository = "https://github.com//space-traders-api"
version = "0.0.0-reserved"


[workspace]
members = ["tools/cargo-bin"]

[workspace.metadata.bin]
cargo-nextest = { version = "0.9.98", locked = true }
cargo-llvm-cov = { version = "0.6.16", locked = true }
just = { version = "1.40.0" }
taplo-cli = { version = "0.10.0", bins = ["taplo"] }
