[package]
name = "space-traders-api"
edition = "2024"
license = "MIT"

description = "Generated API client for SpaceTraders"
repository = "https://github.com/crates-lurey-io/space-traders-api"
version = "0.1.1"

[workspace]
members = ["tools/cargo-bin"]

[workspace.metadata.bin]
cargo-nextest = { version = "0.9.98", locked = true }
cargo-llvm-cov = { version = "0.6.16", locked = true }
just = { version = "1.40.0" }
taplo-cli = { version = "0.10.0", bins = ["taplo"] }

[dependencies]
reqwest = { version = "0.12.22", default-features = false, features = ["json"] }
serde = { version = "1.0.219", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.140", default-features = false }
url = { version = "2.5.4", default-features = false }

[dev-dependencies]
tokio = { version = "1.46.0", default-features = false, features = [
  "macros",
  "rt-multi-thread",
] }
reqwest = { version = "0.12.22", default-features = false, features = [
  "default-tls",
  "json",
] }
